# profile-equalizer-projectm-compliance

./: BUILDING.md  CMakeLists.txt  ProjectMBridge.kt  README.md  THIRD_PARTY_NOTICES.md  UPSTREAM.md  license_lgpl21.txt  projectm_bridge.cpp
